# Recipe-Suggestions-RAG

./: .gitignore  README.md  main.py  pyproject.toml
chroma_db/ebfad2e0-03fa-48f4-a50f-a501f342cfd3/: index_metadata.pickle
database/: create_database.py  data_plit.py
utils/: helpers.py
