[project]
name = "rag-recipes"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro1697",email = "agpn16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "langchain[google-genai] (>=0.3.27,<0.4.0)",
    "langchain-chroma (>=0.2.6,<0.3.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langsmith (>=0.4.29,<0.5.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
